feat: Implement partial service updates and resolve Hibernate cascading issues